Fix navlink spacing

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -139,7 +139,7 @@
 }
 
 .sideBarNavLink {
-  margin: 2em 0;
+  margin: 3vh 0;
   font-size: 20px;
   z-index: 10;
 }
